Tue Apr 01 12:14:20 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html: updated with PID info
	* src/tds/login.c:
	- send correct pid information to mssql (Peter Deacon patch)
	* src/odbc/error.c win32/config.h:
	- best method for include odbcss.h
	* win32/initnet.c:
	- add code to print leak if debug and msvc (Peter Deacon patch)

Mon Mar 31 17:54:34 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_param.c:
	* src/ctlib/unittests/rpc_ct_setparam.c:
	- fix buffer overflow

Mon Mar 31 15:13:19 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c: add comment
	* src/tds/token.c:
	- fixed a buffer overflow
	- set correctly text size

Mon Mar 31 11:11:30 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- applyed Peter Deacon patch for SQLRowCount

Mon Mar 31 10:54:20 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- applyed Peter Deacon patch to provide better sql state if
	  default (ZZZZZ) is returned

Sun Mar 30 17:39:27 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: fix rpm build

Sun Mar 30 16:49:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/tds.h src/tds/token.c:
	- add is_char_type macro to detect all chars type

Sun Mar 30 10:47:19 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- handle 2 other lcid

Sun Mar 30 09:59:30 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c src/tds/iconv.c src/tds/login.c:
	* src/tds/numeric.c src/tds/query.c src/tds/read.c:
	* src/tds/write.c:
	- indent(1)

Sat Mar 29 21:06:55 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: fixed introduced buffer overflows

Sat Mar 29 20:32:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- add support for PARAMFMT2 token (from Sybase patch)

Sat Mar 29 19:58:47 CET 2003  Frediano Ziglio <freddy77@angelfire.com>