@@ -1,3 +1,9 @@
+Tue Apr 01 12:26:20 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c:
+	- Peter Deacon patch
+	 - fix a null dereference
+	 - do not return right after metadata in _SQLExecute
+
 Tue Apr 01 12:14:20 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* doc/tds.html: updated with PID info
 	* src/tds/login.c:
